--- a/frontend/src/components/Loading/Loading.css
+++ b/frontend/src/components/Loading/Loading.css
@@ -2,5 +2,19 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    padding-top: 200px;
+}
+.spinner-loading{
+    position: relative;
+    top: 200px;
+}
+.loading-logo{
+    position: relative;
+    top: 130px;
+    background-color: transparent;
+}
+.loading-logo img{
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+    border-radius: 10%;
 }
