--- a/frontend/src/components/cards-buttons/card-button.css
+++ b/frontend/src/components/cards-buttons/card-button.css
@@ -5,10 +5,10 @@
     border: 2px solid rgb(218, 216, 216);
     color: rgb(218, 216, 216);
     border-radius: 50%;
-    height: 30px;
-    width: 30px;
-    font-size: 16px;
-    font-weight: bolder;
+    height: 40px;
+    width: 40px;
+    font-size: 22px;
+    font-weight: bold;
 }
 
 .card-button.active{
@@ -26,7 +26,3 @@
     font-size: 17px;
 }
 
-.card-button:hover{
-    display: block;
-    opacity: 0.8;
-}
