--- a/frontend/src/components/UserProfile.jsx/UserProfile.css
+++ b/frontend/src/components/UserProfile.jsx/UserProfile.css
@@ -3,7 +3,9 @@
     border-radius: 10%;
     border: 4px solid black;
     cursor: pointer;
+    opacity: 0.7;
 }
 .user-profile-img:hover{
+    opacity: 1;
     border: 4px solid white;
 }
